CloudFormation/ECSExample/ecs-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create ECS

Parameters:
  ContainerImage:
    Type: String
    Description: ECR image URI
    Default : 618584750402.dkr.ecr.ap-northeast-1.amazonaws.com/express-server-for-cloudformation-test:latest

Resources:
  MyEcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: my-sample-ecs-cluster
      ClusterSettings:
        - Name: "containerInsights"
          Value: "enhanced"
          # Value: "enabled"
      CapacityProviders:
        - FARGATE
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1

  MyTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: ecsTaskExecutionRoleForExmapleCloudFormation
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  MyLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /aws/ecs/example-task-for-exmaple-cloudformation
      RetentionInDays: 7

  MyTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: example-task-for-exmaple-cloudformation
      Cpu: 256
      Memory: 512
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !GetAtt MyTaskExecutionRole.Arn
      ContainerDefinitions:
        - Name: node-express-container
          Image: !Ref ContainerImage
          Essential: true
          PortMappings:
            - ContainerPort: 3000
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref MyLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: example-task-for-exmaple-cloudformation

  MyService:
    Type: AWS::ECS::Service
    DependsOn: MyEcsCluster
    Properties:
      ServiceName: cloudformation-test-service
      Cluster: !Ref MyEcsCluster
      LaunchType: FARGATE
      DesiredCount: 1
      TaskDefinition: !Ref MyTaskDefinition
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref PublicECSSecurityGroup
          Subnets:
            - !ImportValue Default-PublicSubnet1Id
            - !ImportValue Default-PublicSubnet2Id

  # Security Group for ECS
  PublicECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: default-vpc-public-sg-for-ecs-new
      GroupDescription: Allow HTTP/HTTPS access from Internet (and 3000 for ECS Develop)
      VpcId: !ImportValue Default-VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: dafault-vpc-PublicECSSecurityGroup
